fix: fix light / dark toggle showing on mobile screen and refactor screen size media queries

--- a/src/app/_components/data-calendar/data-calendar.module.css
+++ b/src/app/_components/data-calendar/data-calendar.module.css
@@ -11,7 +11,7 @@
     rotate: -90deg;
   }
 
-  @media (width >= 640px) {
+  @media (width > 640px) {
     flex-direction: row;
 
     & > :last-child,
@@ -25,10 +25,8 @@
   max-inline-size: 100%;
   overflow-x: scroll;
   padding-block: var(--size-2);
-}
 
-@media (width >= 640px) {
-  .calendarContainer {
+  @media (width > 640px) {
     overflow-x: auto;
   }
 }
